--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site setings
-name: 'Forma'
-description: 'Bold Theme For Brave People'
+name: 'Devlog'
+description: 'Cool develper never dies'
 # Sidebar about text
-site_description: 'Welcome to my blog. It features topics such as fashion, architecture, travel & design. This blog is about finding balance in life, living with purpose, having fun, and doing what you love.'
+site_description: 'Welcome to my blog. It features topics such as engineering, algorithm, my dev logs.'
 logo:
 favicon: 'assets/images/favicon.ico'
 baseurl: 
@@ -13,20 +13,13 @@ mailchimp_url: '//justgoodthemes.us3.list-manage.com/subscribe/post?u=78f1bab160
 ga_analytics: 
 
 # Contact form setings
-email: youremail@email.com
-contact_page_description: "Forma theme comes with a contact form built-in. You can use this form with Formspree service and get up to 50 submissions for free. Also, you can easily switch to another service if you want."
-thankyou_page_description: "Your message has been successfully sent. We will contact you very soon!"
+email: periq23@gmail.com
+contact_page_description: ""
+thankyou_page_description: ""
 
 # Social links
-twitter: 'username'
-facebook: 'username'
-github: 'username'
-codepen: 'username'
-dribbble: 'username'
-medium: '@username'
-instagram: 'username'
-pinterest: 'username'
-linkedin: 'username'
+github: 'yuju-lee'
+linkedin: 'yuju-lee'
 
 # Navigation
 navigation:
