--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,18 +1,9 @@
 daniel:
-  username: daniel
-  name: Daniel Bennett
-  url_full: https://justgoodthemes.com/
-  url: justgoodthemes.com
-  bio: Daniel is a designer, photographer, speaker, author of a couple of books about typography and the founder of photo magazine Curious.
-  picture: /assets/images/daniel.jpg
-  facebook: justgoodthemes
-  twitter: justgoodthemes
-nancy:
-  username: nancy
-  name: Nancy Perez
-  url_full: https://justgoodthemes.com/
-  url: justgoodthemes.com
-  bio: Nancy is a reporter at Wild Bird magazine, where she writes about technology / design companies and the people they impact.
-  picture: /assets/images/nancy.jpg
-  facebook: False
-  twitter: justgoodthemes
+  username: Judy
+  name: Judy
+  url_full: https://www.linkedin.com/in/yuju-lee
+  url: https://www.linkedin.com/in/yuju-lee
+  bio: Junior BE
+  picture: https://pbs.twimg.com/profile_images/1765293945419108352/3WaPZJ0t_400x400.jpg
+  facebook: 
+  twitter: 
