Feature: Fixed yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site setings
-name: 'Judy's devlogs'
+name: "judy's devlog"
 description: 'Cool Developers never dies'
 # Sidebar about text
 site_description: ''
