--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,9 +1,9 @@
-Judy:
+daniel:
   username: Judy
   name: Judy
-  url_full: https://www.linkedin.com/in/yuju-lee
-  url: https://www.linkedin.com/in/yuju-lee
-  bio: Junior BE
+  url_full: https://twitter.com/5pxrtint
+  url: https://twitter.com/5pxrtint
+  bio: 네더릴 폭탄마 전문 EOD
   picture: https://pbs.twimg.com/profile_images/1765293945419108352/3WaPZJ0t_400x400.jpg
   facebook: 
-  twitter: 
+  twitter: 5pxrtint
