--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site setings
-name: 'Judy's devlog'
+name: "Judy's devlog"
 description: 'Bold Theme For Brave People'
 # Sidebar about text
 site_description: 'Welcome to my blog. It features topics such as fashion, architecture, travel & design. This blog is about finding balance in life, living with purpose, having fun, and doing what you love.'
