--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site setings
-name: "Judy's devlog"
+name: 'Judy'
 description: 'Bold Theme For Brave People'
 # Sidebar about text
 site_description: 'Welcome to my blog. It features topics such as fashion, architecture, travel & design. This blog is about finding balance in life, living with purpose, having fun, and doing what you love.'
 logo:
 favicon: 'assets/images/favicon.ico'
-baseurl: 
+baseurl: ""
 production_url: https://forma.netlify.com/
 disqus: 'justgoodthemes'
 mailchimp_url: '//justgoodthemes.us3.list-manage.com/subscribe/post?u=78f1bab16028354caeb23aecd&amp;id=4a7330d117'
