--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,13 @@ paginate_path: /page:num/
 # Permalinks
 permalink: /:title
 
+jekyll-archives:
+  enabled:
+    - tags
+  layout: tag
+  permalinks:
+    tag: /tag/:name/
+    
 # Other
 markdown: kramdown
 
