--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -4,6 +4,6 @@ judy:
   url_full: https://www.linkedin.com/in/yuju-lee
   url: https://www.linkedin.com/in/yuju-lee
   bio: junior BE
-  picture: /assets/images/nancy.jpg
+  picture: /assets/images/judy.jpg
   facebook: False
   twitter: False
