--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: 'Cool developers never dies'
 site_description: ''
 logo:
 favicon: 'assets/images/favicon.ico'
-baseurl: ""
+baseurl: "https://yuju-lee.github.io"
 url: "https://yuju-lee.github.io"
 disqus: 'devlog-qiqv3mtjda'
 mailchimp_url: '//justgoodthemes.us3.list-manage.com/subscribe/post?u=78f1bab16028354caeb23aecd&amp;id=4a7330d117'
