--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ site_description: ''
 logo:
 favicon: 'assets/images/favicon.ico'
 baseurl: ""
-url: "https://yuju-lee.github.io"
+url: "https://yuju-lee.github.io" # 실제 사이트 URL
 disqus: 'devlog-qiqv3mtjda'
 mailchimp_url: '//justgoodthemes.us3.list-manage.com/subscribe/post?u=78f1bab16028354caeb23aecd&amp;id=4a7330d117'
 ga_analytics: ""
